[gd_scene load_steps=28 format=2]

[ext_resource path="res://Boss/02-ready/1.png" type="Texture2D" id=1]
[ext_resource path="res://bullet/enemy.gd" type="Script" id=2]
[ext_resource path="res://bullet/LifeBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Boss/04-attack/5.png" type="Texture2D" id=5]
[ext_resource path="res://Boss/04-attack/1.png" type="Texture2D" id=6]
[ext_resource path="res://Boss/04-attack/2.png" type="Texture2D" id=7]
[ext_resource path="res://Boss/05-electric barrier/1.png" type="Texture2D" id=8]
[ext_resource path="res://Boss/07-broke/1.png" type="Texture2D" id=9]
[ext_resource path="res://Boss/02-ready/2.png" type="Texture2D" id=10]
[ext_resource path="res://Boss/07-broke/5.png" type="Texture2D" id=11]
[ext_resource path="res://Boss/07-broke/3.png" type="Texture2D" id=12]
[ext_resource path="res://Boss/04-attack/3.png" type="Texture2D" id=14]
[ext_resource path="res://Boss/05-electric barrier/2.png" type="Texture2D" id=15]
[ext_resource path="res://Boss/06-damaged/1.png" type="Texture2D" id=16]
[ext_resource path="res://Boss/01-standing/2.png" type="Texture2D" id=18]
[ext_resource path="res://Boss/05-electric barrier/electric effect1.png" type="Texture2D" id=19]
[ext_resource path="res://Boss/07-broke/6.png" type="Texture2D" id=20]
[ext_resource path="res://Boss/01-standing/1.png" type="Texture2D" id=21]
[ext_resource path="res://Boss/03-shoot/4.png" type="Texture2D" id=22]
[ext_resource path="res://Boss/06-damaged/2.png" type="Texture2D" id=23]
[ext_resource path="res://Boss/05-electric barrier/electric effect2.png" type="Texture2D" id=24]
[ext_resource path="res://Boss/07-broke/2.png" type="Texture2D" id=25]
[ext_resource path="res://Boss/03-shoot/3.png" type="Texture2D" id=26]
[ext_resource path="res://Boss/04-attack/4.png" type="Texture2D" id=27]
[ext_resource path="res://Boss/07-broke/4.png" type="Texture2D" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 10 ) ],
"loop": true,
"name": "ready",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 22 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 27 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 16 ) ],
"loop": false,
"name": "damaged",
"speed": 2.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 25 ), ExtResource( 12 ), ExtResource( 28 ), ExtResource( 11 ), ExtResource( 20 ) ],
"loop": false,
"name": "broke",
"speed": 6.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 18 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 24 ) ],
"loop": true,
"name": "electric ",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1676.83, 1168.85 )

[node name="enemy" type="Node2D"]
position = Vector2( 29, 32.75 )
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 34.7059, 34.7058 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "ready"
frame = 1
playing = true
__meta__ = {
"_editor_description_": ""
}

[node name="checkareaenemy" type="Area2D" parent="Sprite2D"]
position = Vector2( -15.2131, -16.1853 )
scale = Vector2( 0.683307, 0.882874 )
collision_layer = 2
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/checkareaenemy"]
position = Vector2( 30.3285, 31.7831 )
scale = Vector2( 0.98525, 1.07493 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -24.509, 34.6048 )
enabled = true
target_position = Vector2( -500, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2( -46.0051, 51.4058 )
scale = Vector2( 0.52459, 0.494208 )

[node name="LifeBar" parent="." instance=ExtResource( 4 )]
offset_left = -66.1689
offset_top = -56.5185
offset_right = 302.831
offset_bottom = -22.5185
scale = Vector2( 0.5, 0.5 )

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( 92.7205, 35.3196 )
enabled = true
target_position = Vector2( 500, 0 )

[node name="Position2D2" type="Marker2D" parent="."]
position = Vector2( 112.49, 51.4042 )
scale = Vector2( 0.52459, 0.494208 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="area_entered" from="Sprite2D/checkareaenemy" to="." method="_on_checkareaenemy_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
